--- a/src/plugins/protocols/ui/outbound/shadowsocks.ui
+++ b/src/plugins/protocols/ui/outbound/shadowsocks.ui
@@ -61,6 +61,31 @@
        <string notr="true">chacha20-ietf-poly1305</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string notr="true">2022-blake3-aes-128-gcm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string notr="true">2022-blake3-aes-256-gcm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string notr="true">2022-blake3-chacha20-poly1305</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string notr="true">2022-blake3-chacha12-poly1305</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string notr="true">2022-blake3-chacha8-poly1305</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
