--- a/src/plugins/protocols/ui/outbound/vless.ui
+++ b/src/plugins/protocols/ui/outbound/vless.ui
@@ -112,6 +112,9 @@
       <property name="text">
        <string notr="true">xtls-rprx-origin-udp443</string>
       </property>
+      <property name="text">
+       <string notr="true">xtls-rprx-vision</string>
+      </property>
      </item>
     </widget>
    </item>
